[gd_scene load_steps=29 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/smg.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/AWM.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player (1).png" type="Texture" id=4]
[ext_resource path="res://pause.png" type="Texture" id=5]
[ext_resource path="res://player/health bar.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/world.gd" type="Script" id=7]
[ext_resource path="res://player/increase-health.tscn" type="PackedScene" id=8]
[ext_resource path="res://04B_30__.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://levels/pause-menu.gd" type="Script" id=10]

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( 64, 32, 32, 32, 32, 0, 64, 0 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 64, 32, 32, 32, 32, 0, 64, 0 ) ]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 0, 0, 96, 0, 96, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 96, 0, 96, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 96, 128, 0, 128, 0, 0, 96, 0 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 128, 128, 32, 128, 32, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 128, 128, 32, 128, 32, 0, 128, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( 96, 128, 0, 128, 0, 32, 96, 32 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 96, 128, 0, 128, 0, 0, 96, 0 )

[sub_resource type="TileSet" id=3]
0/name = "Player (1).png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 1 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 5 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Player (1).png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Player (1).png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( -32, 0, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 6 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 7 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Player (1).png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 96, 128 )
3/tile_mode = 2
3/autotile/icon_coordinate = Vector2( 0, 0 )
3/autotile/tile_size = Vector2( 32, 32 )
3/autotile/spacing = 0
3/autotile/occluder_map = [  ]
3/autotile/navpoly_map = [  ]
3/autotile/priority_map = [  ]
3/autotile/z_index_map = [  ]
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 8 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Player (1).png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 96, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/occluder = SubResource( 9 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 10 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0

[sub_resource type="DynamicFont" id=12]
size = 150
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=14]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="Environment" id=15]
background_mode = 4
glow_enabled = true
glow_strength = 1.09
glow_blend_mode = 1
glow_hdr_threshold = 0.01
glow_hdr_luminance_cap = 0.1
glow_hdr_scale = 4.0
glow_bicubic_upscale = true

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -56, -49 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "enter"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -56, -49 ), Vector2( -1200, -49 ) ]
}

[sub_resource type="DynamicFont" id=18]
size = 40
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=19]
size = 35
font_data = ExtResource( 9 )

[node name="world" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 592.0
color = Color( 0.352941, 0.168627, 0.168627, 1 )

[node name="TileMap" type="TileMap" parent="." groups=["wall"]]
modulate = Color( 0, 0, 0, 1 )
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( 65535, 3, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 28, 3, 0, 29, 3, 0, 30, 3, 0, 31, 3, 0, 131071, 3, 0, 65536, 3, 0, 65567, 3, 0, 196607, 3, 0, 131072, 3, 0, 131103, 3, 0, 262143, 3, 0, 196608, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196633, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 3, 0, 196639, 3, 0, 327679, 3, 0, 262144, 3, 0, 262147, 3, 0, 262172, 3, 0, 262175, 3, 0, 393215, 3, 0, 327680, 3, 0, 327683, 3, 0, 327708, 3, 0, 327711, 3, 0, 458751, 3, 0, 393216, 3, 0, 393219, 3, 0, 393244, 3, 0, 393247, 3, 0, 524287, 3, 0, 458752, 3, 0, 458783, 3, 0, 589823, 3, 0, 524288, 3, 0, 524319, 3, 0, 655359, 3, 0, 589824, 3, 0, 589855, 3, 0, 720895, 3, 0, 655360, 3, 0, 655391, 3, 0, 786431, 3, 0, 720896, 3, 0, 720927, 3, 0, 851967, 3, 0, 786432, 3, 0, 786435, 3, 0, 786460, 3, 0, 786463, 3, 0, 917503, 3, 0, 851968, 3, 0, 851971, 3, 0, 851996, 3, 0, 851999, 3, 0, 983039, 3, 0, 917504, 3, 0, 917507, 3, 0, 917532, 3, 0, 917535, 3, 0, 1048575, 3, 0, 983040, 3, 0, 983043, 3, 0, 983044, 3, 0, 983045, 3, 0, 983046, 3, 0, 983065, 3, 0, 983066, 3, 0, 983067, 3, 0, 983068, 3, 0, 983071, 3, 0, 1114111, 3, 0, 1048576, 3, 0, 1048607, 3, 0, 1179647, 3, 0, 1114112, 3, 0, 1114143, 3, 0, 1245183, 3, 0, 1179648, 3, 0, 1179649, 3, 0, 1179650, 3, 0, 1179651, 3, 0, 1179652, 3, 0, 1179653, 3, 0, 1179654, 3, 0, 1179655, 3, 0, 1179656, 3, 0, 1179657, 3, 0, 1179658, 3, 0, 1179659, 3, 0, 1179660, 3, 0, 1179661, 3, 0, 1179662, 3, 0, 1179663, 3, 0, 1179664, 3, 0, 1179665, 3, 0, 1179666, 3, 0, 1179667, 3, 0, 1179668, 3, 0, 1179669, 3, 0, 1179670, 3, 0, 1179671, 3, 0, 1179672, 3, 0, 1179673, 3, 0, 1179674, 3, 0, 1179675, 3, 0, 1179676, 3, 0, 1179677, 3, 0, 1179678, 3, 0, 1179679, 3, 0 )

[node name="smg" parent="." instance=ExtResource( 2 )]
position = Vector2( 276, 121 )

[node name="smg2" parent="." instance=ExtResource( 2 )]
position = Vector2( 276, 494 )

[node name="player" parent="." groups=["player"] instance=ExtResource( 1 )]
position = Vector2( 126, 60 )

[node name="AWM" parent="." instance=ExtResource( 3 )]
position = Vector2( 723, 121 )

[node name="AWM2" parent="." instance=ExtResource( 3 )]
position = Vector2( 723, 494 )

[node name="health bar" parent="." instance=ExtResource( 6 )]
margin_left = 253.0
margin_top = 557.0
margin_right = 253.0
margin_bottom = 557.0

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="increase-health" parent="." instance=ExtResource( 8 )]
position = Vector2( 783, 191 )

[node name="Timer2" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.0823529 )
margin_left = 378.0
margin_top = 247.0
margin_right = 631.0
margin_bottom = 517.0
custom_fonts/font = SubResource( 12 )
text = "0"

[node name="enembullet" type="Timer" parent="."]
wait_time = 6.0

[node name="Position2D8" type="Position2D" parent="."]
position = Vector2( 952, 310 )

[node name="TNT" type="Timer" parent="."]
wait_time = 12.0

[node name="enemdie" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.223529 )
position = Vector2( 85, 3 )

[node name="Sprite" type="Sprite" parent="enemdie"]
modulate = Color( 1, 0.309804, 0, 1 )
position = Vector2( 332, 76 )
scale = Vector2( 0.384615, 0.279412 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="enemdie"]
margin_left = 358.0
margin_top = 61.0
margin_right = 398.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 13 )
text = "0"

[node name="Sprite2" type="Sprite" parent="enemdie"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 445, 76 )
scale = Vector2( 0.385, 0.279 )
texture = ExtResource( 4 )

[node name="Label2" type="Label" parent="enemdie"]
margin_left = 474.0
margin_top = 61.0
margin_right = 514.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 14 )
text = "0"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 15 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 64, 311 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "enter"
anims/RESET = SubResource( 16 )
anims/enter = SubResource( 17 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 954.0
margin_top = 7.0
margin_right = 1478.0
margin_bottom = 525.0
rect_scale = Vector2( 0.112, 0.112 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 524.0
margin_bottom = 518.0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 524.0
margin_bottom = 518.0
icon = ExtResource( 5 )
flat = true

[node name="pause-menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -4.0
margin_bottom = -4.0
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="pause-menu"]
modulate = Color( 1, 1, 1, 0.188235 )
margin_left = -26.0
margin_top = -34.0
margin_right = 1049.0
margin_bottom = 637.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="pause-menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 375.0
margin_top = 247.0
margin_right = 592.0
margin_bottom = 340.0

[node name="VBoxContainer" type="VBoxContainer" parent="pause-menu/MarginContainer"]
margin_right = 217.0
margin_bottom = 93.0

[node name="resume" type="Button" parent="pause-menu/MarginContainer/VBoxContainer"]
margin_right = 217.0
margin_bottom = 47.0
custom_colors/font_color = Color( 1, 0.968627, 0, 1 )
custom_colors/font_color_hover = Color( 0.980392, 1, 0.447059, 1 )
custom_colors/font_color_pressed = Color( 1, 0.803922, 0, 1 )
custom_fonts/font = SubResource( 18 )
text = "Resume"
flat = true

[node name="back" type="Button" parent="pause-menu/MarginContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 217.0
margin_bottom = 93.0
custom_colors/font_color = Color( 1, 0.968627, 0, 1 )
custom_colors/font_color_hover = Color( 0.980392, 1, 0.447059, 1 )
custom_colors/font_color_pressed = Color( 1, 0.803922, 0, 1 )
custom_fonts/font = SubResource( 19 )
text = "Back"
flat = true

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -56.0
margin_top = -49.0
margin_right = 1077.0
margin_bottom = 667.0
color = Color( 0, 0, 0, 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="enembullet" to="." method="_on_enembullet_timeout"]
[connection signal="timeout" from="TNT" to="." method="_on_TNT_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="pause-menu/MarginContainer/VBoxContainer/resume" to="pause-menu" method="_on_resume_pressed"]
[connection signal="pressed" from="pause-menu/MarginContainer/VBoxContainer/back" to="pause-menu" method="_on_back_pressed"]
